# uranium

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  TODO.md  \  bin-build.rs  book.toml  build.rs  build.sh  compose.yaml  deploy.sh  docker-compose.yaml  docker-compose.yml  email.html  email2.html  index.html  not-found.html  output.txt  package.json  print.html  response.json  sample.rs  searchindex.js  searchindex.json  tsts.log.txt
.github/workflows/: build.yml  gh-page.yml  gh-pages.yml  mdbook.yml  release.yml  rust.yml  rustdoc.yml  tag.yml
_migrations/: 20221029125942_create_user_information_table.sql  20221222092143_change-email-column-date-type.sql
app/: Cargo.toml
app-old/: Cargo.toml  README.md
app-old/src/: lib.rs
app-old/src/common/: uranium.rs
app-old/src/config/: app_state.rs  mod.rs
app-old/src/extractors/: auth.rs  mod.rs
app-old/src/handlers/: mod.rs
app-old/src/router/: auth.rs  mod.rs
app-old/src/utils/: mod.rs  otp_handler.rs  sql_query_builder.rs
app/extractors/: auth.rs
app/src/: lib.rs
app/src/common/: mod.rs
app/src/config/: app_state.rs  mod.rs  multiplexer.rs
app/src/extractors/: auth.rs  mod.rs
app/src/handlers/: auth.rs  users.rs
app/src/router/: auth.rs  mod.rs  users.rs
app/src/utils/: api_response.rs  message_queue.rs
chapter_01/: index.html  installation.html  overview.html
chapter_02/: index.html
chapter_03/: index.html
cli/: Cargo.toml
dashboard/: nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
dashboard/pages/: index.vue
docker/dev/: Dockerfile
docs/: README.md  book.toml
docs-xr/: book.toml
docs-xr/src/: not-found.md  overview.md
docs/src/: SUMMARY.md  api-documentation.md  features.md  getting-started.md  introduction.md  license.md  overview.md
entities/: Cargo.toml  mod.rs  prelude.rs  user_information.rs
entity/: Cargo.toml  README.md
entity/src/: lib.rs
mailer/: Cargo.toml  README.md
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230205_003534_CREATE_user_information_table.rs  m20230805_005634_create_user_information_table.rs
migrations/: 20220915005329_create-user-information-schema.sql  20220921130549_email-tabel-definition.sql  20220928191313_authorization_token.sql  20220929200046_create-project-table.sql  20221003134734_add-constraint-to-project-table.sql  20221004181653_create-notes-table.sql  20221007223001_create-todo.sql  20221024224407_create-user-information-table.sql  20221024225646_add-constraint-to-user-email.sql  20221024225913_add-date-created-to-user_information.sql  20221025000838_add-status-to-user_information.sql  20221025001330_add-status-to-user_information.sql  20221027190758_create-user-information-table.sql  20221028114846_create-todo_list.sql  20221029125942_create_user_information_table.sql  20221029125959_create_note_entries_table.sql  20221029130008_create_todo_list_table.sql  20221222080655_create_emails_table.sql  20221222091516_update-email-foler-name.sql  20230205201837_create_user_information_table.sql  20230205205142_create_user_information_table.sql  20230205224622_add_fullname_to_user_information.sql  20230205225142_update_user_information_field.sql  20230209024824_create_otp_table.sql  20230209175556_add_otp_id_to_user_information.sql  20230211183804_rename_otp_filed.sql  20230213180800_add_fk_to_user_information.sql  20230328225735_create_access_tokens_table.sql  20250508133912_create-user-table.sql
preface/: index.html
proto/: uranium.proto
raccoon_macros/: Cargo.toml
raccoon_macros/src/: lib.rs
raccoon_mailer/: Cargo.toml
raccoon_mailer/src/: gmail_smtp.rs  lib.rs
racoon_macros/: Cargo.toml  README.md
racoon_macros/src/: debug_print.rs  lib.rs  mod.rs
racoon_mailer/: Cargo.toml  README.md
racoon_mailer/src/: gmail_smtp.rs  mail_dispactcher.rs
racoon_mailer/templates/: crash.html  index.html
sandbox/: crash.rs  crash_email.rs  email.rs  inheritance.rs  ip.rs  lettre.rs.rs  print.rs  revert-emil.rs  rlettre.rsx  str_token.rs  time.rs
scripts/: package.json
src/: config.rs  database_connection.rs  error.rs  jwt.rs  lib.rs  main.rs
src/adapters/: email_templates.rs  kafka.rs  mod.rs
src/config/: config.rs  database.rs  mod.rs
src/controllers/: auth.rs  auth_controllers.rs  email_controllers.rs  file_server.rs  mod.rs  notes_controllers.rs  oauth2.rs  oauth2_discord.rs  oauth2_google.rs  project_controllers.rs  root.rs  todo_controllers.rs  user.rs
src/entities/: mod.rs  user.rs
src/errors/: app_error.rs  auth_error.rs  auth_service_error.rs  common_service_error.rs  database_error.rs  mod.rs  service_error.rs  shared_service_error.rs  user_service.rs  user_service_error.rs
src/grpc_service/: authentication.rs  health_check.rs  mod.rs  user_profile.rs
src/interceptors/: authentication.rs  mod.rs  shared.rs
src/lib/: api_response copy.rs  jwt_schema.rs  messenger.rs  mod.rs
src/middlewares/: auth.rs  mod.rs  validator.rs
src/models/: common.rs  emails.rs  mod.rs  notes.rs  otp.rs  projects.rs  todo.rs  users.rs
src/repositories/: user_repository.rs
src/routes/: auth.rs  auth_routes.rs  email_routes.rs  mod.rs  notes_routes.rs  oauth2.rs  oauth2_discord.rs  oauth2_google.rs  project_routes.rs  public.rs  root.rs  router.rs  todo_routes.rs  users.rs
src/services/: auth_service.rs  mod.rs  root_service.rs  user_helper_service.rs  user_service.rs
src/shared/: api_response.rs  extract_env.rs  jwt_schema.rs  mailer.rs  mod.rs  otp_handler.rs  user_schema.rs
src/states/: mod.rs  services_state.rs
src/templates/: temp.html
src/utils/: api_response.rs  jwt.rs  jwt_schema.rs  mailer.rs  message_queue.rs  mod.rs  otp_handler.rs  sql_query_builder.rs
tests/: health_check_test.rs
utils/: Cargo.toml
utils/src/: mailer.rs  messenger.rs  mod.rs
views/: index.html  manifest.json  manifest.webmanifest  registerSW.js  service-worker.js  sw.js  workbox-cc8906f2.js
views/assets/: AllEmailView.0efa7b3a.js  AllEmailView.279d9ae2.js  (+987 more)
(+23 files in other folders)
