[package]
name = "uranium"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.88"
axum = { version = "0.8.3", features = ["tracing"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
log = "0.4.27"
logs = "0.7.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "postgres",
    "macros",
    "runtime-tokio-rustls",
] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
axum = { version = "0.8.3", features = ["macros"] }
