[package]
edition = "2021"
name = "app"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
axum = {version = "0.6.20", features = ["json"]}
bcrypt = "0.15.0"
chrono = "0.4.26"
dotenv = "0.15.0"
dotenvy = "0.15.7"
entity = {path = "../entity"}
error = "0.1.9"
fake = "2.6.1"
futures = "0.3.28"
http-body = "0.4.5"
jsonwebtoken = "8.3.0"
log = "0.4.19"
migration = {path = "../migration"}
sea-orm = {version = "0.12.2", features = ["macros", "debug-print", "with-uuid", "sqlx-postgres", "runtime-tokio-rustls"]}
serde = "1.0.181"
serde_json = "1.0.104"
simple_logger = "4.2.0"
this = "0.3.0"
thiserror = "1.0.44"
tokio = {version = "1.29.1", features = ["full"]}
tower-http = {version = "0.4.3", features = ["cors", "trace"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
uuid = "1.4.1"
validator = {version = "0.16.1", features = ["derive"]}
prost = {workspace = true}
tonic = {workspace = true}
