[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
bcrypt = "0.15.0"
dotenv = "0.15.0"
fake = "2.6.1"
jsonwebtoken = "8.3.0"
serde = "1.0.181"
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.3", features = ["cors"] }
tracing = "0.1.37"
uuid = "1.4.1"
validator = "0.16.1"
