[package]
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepge.workspace = true
keywords.workspace = true
exclude.workspace = true
license-file.workspace = true
version.workspace = true
name="uranium-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
