[package]
name = "racoon_mailer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
lettre = "0.10.2"
once_cell = "1.17.0"
serde = { version = "1.0.152", features = ["derive"] }


[lib]
path = "./src/lib.rs"
