[package]
edition = "2021"
name = "racoon_mailer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [workspace]
# members = [
#   "racoon_macros",
# ]

[dependencies]
chrono = "0.4.23"
lettre = "0.10.2"
once_cell = "1.17.0"
racoon_macros = {path = "../racoon_macros"}
serde = {version = "1.0.152", features = ["derive"]}

[lib]
path = "./src/lib.rs"
